--- a/src/components/pages/Showcase/ShowcaseViewer/ShowcaseViewer.css
+++ b/src/components/pages/Showcase/ShowcaseViewer/ShowcaseViewer.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100vh;
   max-height: 100vh;
@@ -126,7 +126,7 @@
 
 /* Animation 3 - Nexus-Prime #003 (Matrix Geometry Green) */
 .viewer-overlay-3 {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100vh;
   max-height: 100vh;
@@ -283,7 +283,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100vh;
   background-color: #000000;
