--- a/src/styles/components/homepage.css
+++ b/src/styles/components/homepage.css
@@ -58,7 +58,7 @@
 
 /* Parallax Container */
 .parallax-container {
-  width: 100vw;
+  width: 100%;
   margin-top: 70px;
   overflow-x: hidden;
 }
