--- a/src/styles/core/reset.css
+++ b/src/styles/core/reset.css
@@ -39,7 +39,7 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   z-index: -100;
   pointer-events: none;
