--- a/src/styles/quantumBackground.css
+++ b/src/styles/quantumBackground.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 100vh;
   pointer-events: none;
@@ -43,7 +43,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   z-index: -1;
   pointer-events: none;
@@ -67,7 +67,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   z-index: 0;
   pointer-events: none;
